it works, app launching